--- a/dashboard/apps/previewer.fma/css/style.css
+++ b/dashboard/apps/previewer.fma/css/style.css
@@ -7,7 +7,8 @@
     width: auto;
     margin: 20px;
     padding: 20px;
-    color: black
+    color: black;
+    border-radius: 5px;
 }
 
 .widget {
