--- a/dashboard/apps/editor.fma/css/codemirror.css
+++ b/dashboard/apps/editor.fma/css/codemirror.css
@@ -336,3 +336,48 @@ div.CodeMirror-dragcursors {
 
 /* Help users use markselection to safely style text background */
 span.CodeMirror-selectedtext { background: none; }
+
+/* FOR DIALOG ADDON */
+.CodeMirror-dialog {
+  position: absolute;
+  right: 0;
+  background: inherit;
+  z-index: 15;
+  padding: .1em .8em;
+  overflow: hidden;
+  color: inherit;
+  border-left: 1px solid #eee;
+}
+
+.CodeMirror-dialog-top {
+  border-bottom: 1px solid #eee;
+  top: 0;
+}
+
+.CodeMirror-dialog-bottom {
+  border-top: 1px solid #eee;
+  bottom: 0;
+}
+
+.CodeMirror-dialog-left {
+  border-left: 1px solid #eee;
+  right: 0;
+}
+
+
+.CodeMirror-dialog input {
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 40em;
+  color: inherit;
+  font-family: monospace;
+}
+
+.CodeMirror-dialog button {
+  font-size: 70%;
+}
+
+.CodeMirror-search-hint {
+  display: none;
+}
