--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -234,6 +234,7 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 
 #connection-strength-indicator {
 	height: 30px;
+   max-width:30px;
 }
 
 .svg-container {
