--- a/dashboard/apps/home.fma/css/style.css
+++ b/dashboard/apps/home.fma/css/style.css
@@ -4,7 +4,7 @@
     height: 100px;
     float: left;
     border-radius: 5px;
-    margin: 0.6rem;
+    margin: 0.6rem 0.6rem 2.2rem 0.6rem;
     position: relative;
     cursor: pointer;
     -moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
@@ -45,7 +45,7 @@
     height: 100px;
 
     border-radius: 5px;
-    margin: 0.6rem;
+    margin: 0.6rem 0.6rem 2.2rem 0.6rem;
     position: relative;
     cursor: pointer;
     border: dashed 3px #bbb;
@@ -108,4 +108,16 @@ filter: blur(3px);
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+.appname{
+    position: absolute;
+    margin-top: 105%;
+    width: 100px;
+    line-height: 20px;
+    height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+    
 }
