--- a/dashboard/apps/home.fma/css/style.css
+++ b/dashboard/apps/home.fma/css/style.css
@@ -37,7 +37,9 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
- 
+    user-select: none;
+    -webkit-user-select:none;
+    -webkit-touch-callout:none;
 }
 .app_add {
     float: left;
