--- a/dashboard/apps/home.fma/css/style.css
+++ b/dashboard/apps/home.fma/css/style.css
@@ -13,8 +13,7 @@
 	-moz-box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
 	-webkit-box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
 	box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
-
-      z-index: 1;
+    z-index: 1;
 }
 
 .app_item:hover {
@@ -122,4 +121,21 @@ filter: blur(3px);
     text-overflow: ellipsis;
     text-align: center;
     
+}
+
+@media only screen and (max-device-width: 480px) {
+    .app_item, .app_add{
+        width: 50px;
+        height: 50px;
+       
+    }
+    .app_add {
+        font-size: 12px;
+    }
+    .appname {
+        width: 50px;    
+        line-height: 10px;
+        height: 20px;
+        font-size: 8px;
+    }
 }
