--- a/dashboard/apps/tour.fma/css/style.css
+++ b/dashboard/apps/tour.fma/css/style.css
@@ -3,10 +3,11 @@
     width: 100%;
     white-space: nowrap;
     position: fixed;
-    transition: left 0.5s;
+    transition: left 0.5s linear;
     margin: 0;
     padding: 0;
     font-size: 0;
+    left: 0;
 }
 
 .tour-card {
@@ -84,13 +85,27 @@ span {
     height: 100%;
     transition: all 1s;
     float: right;
-    -webkit-box-shadow: 0px 0px 20px 2px #000;
--moz-box-shadow: 0px 0px 20px 2px #000;
-box-shadow: 0px 0px 20px 2px #000;
+    -webkit-box-shadow: 0px 0px 20px 1px #777;
+-moz-box-shadow: 0px 0px 20px 1px #777;
+box-shadow: 0px 0px 20px 1px #777;
 z-index: 20;
 display: none;
 }
 
+
+.card-action {
+    max-width: 200px;
+    background-color: #32B433;
+    color: #fff;
+    font-family: source_sans_proregular;
+    text-align: center;
+    margin-left: auto;
+    margin-right:auto;
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 
 
