--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -3,6 +3,81 @@ body {
   height: 100%;
 }
 
+.filter {
+    display: none;
+     position: fixed;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+     z-index: 2000;
+     background: #000;
+     opacity: 0.8;
+
+}
+
+.tour-dialogue{
+  width: 50%;
+  max-width: 500px;
+  min-width: 300px;
+  padding: 2rem;
+  position: absolute;
+  z-index: 2001;
+  background-color: #eee;
+  color: #222;
+  display: none;
+  top: 30%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) 
+}
+
+.tour-text {
+  margin-bottom: 0;
+}
+
+.next{
+  width: 100px;
+  padding: 1rem;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #32B433;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tour-pointer {
+  position: absolute;
+    left: 7px;
+    max-width: 250px;
+    text-align: left;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
+    z-index: 2002;
+    padding: 0.5rem;
+    display: none;
+    border-radius: 2px;
+}
+
+.pointer{
+  position: absolute;
+    left: 5px;
+    width: 1rem;
+    height: 1rem;
+    margin-top: 1px;
+    transform: translatex(2.1em);
+    background-color: #ffffff;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    border-bottom: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    box-shadow: 2.5px 2.5px 5px -2.5px rgba(0,0,0,0.75);
+}
+
 .running {
   animation: pulse 2s infinite;
 }
