--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -46,7 +46,31 @@ body {
   cursor: pointer;
   margin-left: auto;
   margin-right: auto;
+  display: inline-block;
 }
+
+.no{
+  width: 100px;
+  padding: 1rem;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #9C210C;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  margin-left: 1rem;
+}
+
+.tour-buttons {
+  margin-top: 1rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 
 .tour-pointer {
   position: absolute;
@@ -350,8 +374,7 @@ td.actions-control {
 #name {
     padding: 1px;
     font-weight: bold;
-    margin-bottom: 0.5em;
-    line-height: 1.1em;
+    line-height: 1.1rem;
     height: 30px;
     overflow: hidden;
     position: relative;
