--- a/dashboard/apps/tour.fma/css/style.css
+++ b/dashboard/apps/tour.fma/css/style.css
@@ -3,11 +3,27 @@
     width: 100%;
     white-space: nowrap;
     position: fixed;
+    top: 30px;
     transition: left 0.4s linear;
     margin: 0;
     padding: 0;
     font-size: 0;
     left: 0;
+}
+
+.tour-decloration {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    color: #111;
+    height: 30px;
+    font-family: source_sans_proextralight;
+    background-color: #FFFFFF;
+}
+
+.tour-decloration p {
+    text-align: center;
+    line-height: 30px;
 }
 
 .tour-card {
@@ -107,7 +123,7 @@ p {
     text-align: center;
     margin-left: auto;
     margin-right:auto;
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 1rem;
     border-radius: 5px;
     cursor: pointer;
