--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1989,3 +1989,18 @@ input[type=number]::-webkit-outer-spin-button {
 .logout_link_container a{
   color: #eeeeee;
 }
+
+.blur {
+-webkit-filter: blur(2px);
+-moz-filter: blur(2px);
+-o-filter: blur(2px);
+-ms-filter: blur(2px);
+filter: blur(2px);
+}
+
+.tour-filter{
+	position: absolute;
+    width: 100%;
+    height: 0;
+    z-index: 1;
+}
