eliminate spurious log outs

--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -430,8 +430,8 @@ td.actions-control {
     margin-left: 0.5em;
   }
 
-  .job_name {
-    height: 15px;
+  .job_name, #name {
+    height: 20px;
   }
 
   .job_item, .chosen, .recent_item{
