Update viewer. Fix #531.
- Three.js and GCodeToGeometry are now added as node modules.
- Foundation dependency is removed.
- Removed very old version of G-Code Viewer.

--- a/dashboard/apps/previewer.fma/css/gcodeviewer.css
+++ b/dashboard/apps/previewer.fma/css/gcodeviewer.css
@@ -4,11 +4,8 @@
     background: #ffffff;
     border: black solid 1px;
     z-index: 10;
-    width: auto;
-    margin: 20px;
-    padding: 20px;
-    color: black;
-    border-radius: 5px;
+    width = auto;
+    height = 100px;
 }
 
 .widget {
