Fix preview for OpenSBP

--- a/dashboard/apps/previewer.fma/css/gcodeviewer.css
+++ b/dashboard/apps/previewer.fma/css/gcodeviewer.css
@@ -2,10 +2,13 @@
 #loadingMessage {
     position: absolute;
     background: #ffffff;
-    border: black solid 1px;
+    border: gray solid 1px;
     z-index: 10;
-    width = auto;
-    height = 100px;
+    width : auto;
+    height : 100px;
+    padding : 20px;
+    margin : 20px;
+    border-radius: 3px;
 }
 
 .widget {
