--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -931,22 +931,22 @@ input[type=number]::-webkit-outer-spin-button {
 	box-shadow: 0px -2px 15px -6px rgba(0,0,0,0.75);
 }
 
-.pauseJob p {
-	position: relative;
-  	text-align: center;
+.pauseJob div {
 	color: #ffffff;
-	font-size: 3em;
+	font-size: 35px;
 	font-family: Arial;
 	z-index: 10;
-	padding-top: 35px;
+
 }
 
-.pauseJob {
+.pauseJob-wrapper {
+	display: block;
+	align-items: center;
+	justify-content: center;
     cursor: pointer;
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
 	width: 36%;
 	height: 150px;
 	margin-top: 12px;
@@ -961,73 +961,17 @@ input[type=number]::-webkit-outer-spin-button {
           user-select: none;
 }
 
-/*
-.pauseJob:before,
-.pauseJob:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 5px;
-
-  height: 60px;
-  margin-top: -30px;
-  z-index: 1;
-}
-.pauseJob:after {
-  left: auto;
-  right: 0;
-  margin-top: -30px;
-  height: 60px;
-
-}
-
-.pauseJobInner {
-  position: absolute;
-  top: 0px;
-  width: 150px;
-  height: 150px;
-  background: #ff0000;
-  border: 5px solid #A60000;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  transition: all 2s linear;
-}
-
-.pauseJobInner:before,
-.pauseJobInner:after {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  content: "";
-  position: absolute;
-  width: 5px;
-
-  height: 60px;
-  margin-top: -30px;
-  z-index: 1;
-  right: auto;
-  left: 16px;
-  bottom: auto;
-  top: 19px;
-  transition: all 2s linear;
-}
-
-.pauseJobInner:after {
-  height: 60px;
-  right: 16px;
-  left: auto;
-  bottom: -12px;
-  top: auto;
-  transition: all 2s linear;
+.pauseJob {
+    display: flex;
+    cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	transition: all 1s;
+	width: 100%;
+   	height: 100%;
 }
 
 
-
-.pauseJobInner.blink{
-	border: 5px solid #ff0000;
-	background-color: #A60000;
-	transition: all 2s linear;
-  */
 .fabmo-resume-stop {
     margin-top: 12px;
 	position: relative;
@@ -1054,10 +998,11 @@ input[type=number]::-webkit-outer-spin-button {
 	transition: border background-color 2s linear;
 }
 
-.fabmo-resume-stop div {
-    display: block;
+.fabmo-resume-stop .but {
+    display: flex;
     cursor: pointer;
-	text-align: center;
+	align-items: center;
+	justify-content: center;
 	font-family: Arial;
 	color: #ffffff;
 	font-size: 25px;
@@ -1070,7 +1015,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .stopJob {
-   background: #f20000;
+   background: #ff0000;
    border: solid #ff0000 1px;
    border-radius: 0 0 5px 5px;
 }
@@ -1102,12 +1047,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media only screen and (max-width: 700px){
-	.pauseJob p {
+	.pauseJob div {
 		font-size: 2em;
-		padding-top: 20px;
 	}
 
-	.pauseJob{
+	.pauseJob-wrapper{
 		margin-top: 40px;
 		height: 100px;
 	}
@@ -1131,12 +1075,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media only screen and (max-width: 400px){
-	.pauseJob p {
+	.pauseJob div {
 		font-size: 2em;
-		padding-top: 20px;
 	}
 
-	.pauseJob{
+	.pauseJob-wrapper{
 		margin-top: 40px;
 		height: 100px;
 	}
@@ -1917,13 +1860,87 @@ input[type=number]::-webkit-outer-spin-button {
   	transform: translateY(-50%);
 }
 
-/*Edge specific*/
-@supports (-ms-ime-align:auto) {
-  .loader > svg {
-    transform-origin: 50% 50%;
-    animation: spin 4s linear infinite;
+/* Special Custom Style : rotations et animations */
+
+
+.spinner {
+
+
+	text-indent: -9999em;
+	width: 2.5em;
+	height: 2.5em;
+	border-radius: 50%;
+	background: #fff;
+	background: -moz-linear-gradient(left, #fff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -webkit-linear-gradient(left, #fff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -o-linear-gradient(left, #fff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -ms-linear-gradient(left, #fff 10%, rgba(255, 255, 255, 0) 42%);
+	background: linear-gradient(to right, #fff 10%, rgba(255, 255, 255, 0) 42%);
+	position: relative;
+	-webkit-animation: load3 1.4s infinite linear;
+	animation: load3 1.4s infinite linear;
+
   }
-}
+  .spinner:before {
+	width: 50%;
+	height: 50%;
+	background: #fff;
+	border-radius: 100% 0 0 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: '';
+  }
+  .spinner.red:after {
+	background: #ff0000;
+	width: 75%;
+	height: 75%;
+	border-radius: 50%;
+	content: '';
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+  }
+
+  .spinner.green:after {
+	background: #32B433;
+	width: 75%;
+	height: 75%;
+	border-radius: 50%;
+	content: '';
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+  }
+
+  @-webkit-keyframes load3 {
+	0% {
+	  -webkit-transform: rotate(0deg);
+	  transform: rotate(0deg);
+	}
+	100% {
+	  -webkit-transform: rotate(360deg);
+	  transform: rotate(360deg);
+	}
+  }
+  @keyframes load3 {
+	0% {
+	  -webkit-transform: rotate(0deg);
+	  transform: rotate(0deg);
+	}
+	100% {
+	  -webkit-transform: rotate(360deg);
+	  transform: rotate(360deg);
+	}
+  }
+
+
 
 /*Old loading spinner*/
 /*@-webkit-keyframes spinner {
