--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1327,6 +1327,17 @@ input[type=number]::-webkit-outer-spin-button {
 	height : 50px;
 }
 
+.enter-button {
+	color: white;
+	line-height: 45px;
+	border-radius: 32px;
+	font-weight: bolder;
+	font-size: 24px;
+	text-align: center;
+	width  : 50px;
+	height : 50px;
+}
+
 .settings-button {
 	color: white;
 	line-height: 48px;
