--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1334,8 +1334,10 @@ input[type=number]::-webkit-outer-spin-button {
 	font-weight: bolder;
 	font-size: 24px;
 	text-align: center;
-	width  : 50px;
+	width  : 100px;
 	height : 50px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .settings-button {
