adding velocity bar

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1462,9 +1462,19 @@ input[type=number]::-webkit-outer-spin-button {
 	display: inline-block;
 }
 
+.read-out-container label {
+	background-color: #333;
+	border: none;
+	color: #eee;
+}
+
 .read-out-container input {
-	font-family: 'source_sans_proextralight';
-	padding: 15px 0 15px 12px;
+	font-family: 'Droid_Sans_Mono';
+	width: 8rem;
+	text-align: center;
+	height: auto;
+    font-size: 23px;
+	padding: 15px 15px 15px 15px;
     background: rgba(0,0,0,0.3);
     border: none;
     outline: none;
@@ -1477,8 +1487,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .read-out-container input:focus {
 	background: rgba(0,0,0,0.3);
-	border: 0.5px solid rgba(0,0,0,0.3);
-	box-shadow: inset 0 -5px 45px rgba(95,169,61,0.2), 0 1px  1px rgba(95,169,61,0.2);
+	border: 0.5px solid rgba(95,169,61,0.8);
+	box-shadow: inset 0 -1px 10px rgba(95,169,61,0.3), 0 1px  1px rgba(95,169,61,0.2);
     /* box-shadow: inset 0 0px 1px #5FA93D, 0 0px 1px #5FA93D; */
 }
 
