--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1434,6 +1434,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 }
 
+.slidecontainer {
+	margin-bottom: 10px;
+}
+
 
 
 
@@ -1447,6 +1451,22 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
+}
+
+.keypad-cell:first-child .fa-keypad{
+	transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.keypad-cell:nth-child(3) .fa-keypad{
+	transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.keypad-cell:nth-child(7) .fa-keypad{
+	transform: translate(-50%, -50%) rotate(-135deg);
+}
+
+.keypad-cell:nth-child(9) .fa-keypad{
+	transform: translate(-50%, -50%) rotate(135deg);
 }
 
 #keypad {
@@ -1800,7 +1820,7 @@ input[type=number]::-webkit-outer-spin-button {
 		transform: translateY(0%);
 		width: 250px;
 		height: 200px;
-		margin-top: 3rem;
+		margin-top: 2rem;
 		margin-left: auto;
 		margin-right: auto;
 		top: 0;
